# Object-oriented-programming

./: README.md
01_Addition/Addition/: main.cpp
01_Addition/Test_Addition/: CMakeLists.txt  test.cpp
01_Addition/libaddition/: Addition.cpp  Addition.h  CMakeLists.txt
02_tdd/: CMakeLists.txt
02_tdd/include/: TextWrapper.h
02_tdd/src/: TextWrapper .cpp  TextWrapper.cpp  main.cpp
02_tdd/test/: CMakeLists.txt
05_stl_benchmark/: readme.md
05_stl_benchmark/bench/: CMakeLists.txt
05_stl_benchmark/bench/src/: DummyBench.cpp  Forward_listLargeBenchRelease.cpp  Forward_listMediumBenchRelease.cpp  Forward_listSmallBench.cpp  Forward_listSmallBenchRelease.cpp  LargeBench.cpp  MediumBench.cpp  SetLargeBenchRelease.cpp  SetMediumBenchRelease.cpp  SetSmallBench.cpp  SetSmallBenchRelease.cpp  SmallBench.cpp  Unordered_multisetLargeBenchRelease.cpp  Unordered_multisetMediumBenchRelease.cpp  Unordered_multisetSmallBench.cpp  Unordered_multisetSmallBenchRelease.cpp
05_stl_benchmark/include/: Large.h  Medium.h  Small.h
05_stl_benchmark/output/: ForwardListMediumReleaseBench  ForwardListSmallBenchmark  ForwardListSmallReleaseBench  MediumReleaseBench  (+11 more)
06_observer_pattern/: CMakeLists.txt
07_abstract_factory_pattern/: CMakeLists.txt
08_fake_mock_or_stub/: CMakeLists.txt
1.2_Addition/Addition/: CMakeLists.txt  main.cpp
10_state_machine/: mainwindow.cpp  testFile
11_QML/: 11_QML.pro  acceleration.cpp  acceleration.h  demo.cpp  demo.h  displacement.cpp  displacement.h  main.cpp  main.qml  speed.cpp  speed.h
build-10_state_machine-Desktop-Debug/: 10_state_machine  Makefile
(+91 files in other folders)
